<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pandelis.ga_testnavig.Language">

    <!-- TODO: Update blank fragment layout -->


    <Button
        android:text="@string/default_lang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/default_la"
        android:layout_marginTop="48dp"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/langu_choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textSize="25sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/spanish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spanish"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/english"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/english"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:id="@+id/english"
        android:layout_below="@+id/default_la"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
